Closed
Bug 948448
Opened 7 years ago
Closed 7 years ago
Clear Private Data doesn't delete seer.sqlite
Categories
(Core :: Networking, defect)
Tracking
()
VERIFIED
FIXED
mozilla29
People
(Reporter: aeidein, Assigned: u408661)
References
Details
Attachments
(1 file)
854 bytes,
patch
|
mayhemer
:
review+
|
Details | Diff | Splinter Review |
User Agent: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:28.0) Gecko/20100101 Firefox/28.0 (Beta/Release) Build ID: 20131210040201 Steps to reproduce: Ctrl+Shift+Del, check everything and select Everything time range. Actual results: seer.sqlite persists in the user profile. Expected results: should be deleted.
Comment 1•7 years ago
|
||
This looks to be not cleared, however I think seer.sqlite might be cleared but just not deleted or even vacuumed. I've got a 28MB one in my primary profile that is mostly empty space.
OS: Windows 7 → All
Hardware: x86_64 → All
There are deletes run on all tables when 'clear private data' is selected. I should probably add a vacuum into the clearing to actually free up the disk space.
Assignee: nobody → hurley
This should do it. Builds on top of patches from bug 945779 and bug 947745, so those are prerequisites to this landing.
Attachment #8346178 -
Flags: review?(honzab.moz)
Updated•7 years ago
|
Component: General → Networking
Product: Firefox → Core
![]() |
||
Comment 4•7 years ago
|
||
Comment on attachment 8346178 [details] [diff] [review] seer_reset_vacuum.patch Review of attachment 8346178 [details] [diff] [review]: ----------------------------------------------------------------- vacuum can be quite expensice, but if you cap the size, then it's probably not going to be that horrible. let's see how this works.
Attachment #8346178 -
Flags: review?(honzab.moz) → review+
Comment 5•7 years ago
|
||
Apart the expensiveness issue (that I suppose is happening in background, but may still cap I/O to other consumers), the other drawback is that insertions in freelists are cheaper, so, if you don't vacuum, new insertions will be faster. That said, considered this is only after a clear private data, it may be ignorable. This falls in the usual size/perf bucket, the answer depends on the scope of the code. I suppose this db grows so much cause there are many indices on uris, every index duplicates all of the uris, and so there's lots of strings. So maybe another way to look at it could be to reduce the size of the db, by reducing duplication of data caused by indices.
Comment 7•7 years ago
|
||
https://hg.mozilla.org/mozilla-central/rev/c5684d09fa1b
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla29
Comment 8•7 years ago
|
||
Verified as fixed with Firefox 29 beta 3 on Win 7 x64, Ubuntu 13.10 x86 and Mac OS X 10.8.5: seer.sqlite is deleted after clearing the private data.
Status: RESOLVED → VERIFIED
Keywords: verifyme
You need to log in
before you can comment on or make changes to this bug.
Description
•