Bug 948448 - Free up disk space after clearing seer data. r=honzab